--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,10 @@ android {
         }
     }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.isseiaoki:simplecropview:1.0.8'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.parse.bolts:bolts-android:1.+'
 }
