--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.saqibfredrik.smartkitchen" >
 
+    <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -9,7 +10,6 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
     <!--
       IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
       to match your app's package name + ".permission.C2D_MESSAGE".
@@ -17,6 +17,7 @@
     <permission android:protectionLevel="signature"
         android:name="com.example.saqibfredrik.smartkitchen.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.example.saqibfredrik.smartkitchen.permission.C2D_MESSAGE" />
+    <!-- End of Permissions -->
 
     <application
         android:allowBackup="true"
@@ -35,14 +36,11 @@
             </intent-filter>
         </activity>
 
+        <!-- Need for Parse.com notifications -->
         <service android:name="com.parse.PushService" />
-        <receiver android:name="com.parse.ParseBroadcastReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-            </intent-filter>
-        </receiver>
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
+
+        <receiver
+            android:name="com.parse.ParsePushBroadcastReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
@@ -50,18 +48,30 @@
                 <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
         </receiver>
+
+        <!-- MyCustom Notification Receiver -->
+
+        <receiver
+            android:name= "com.example.saqibfredrik.smartkitchen.ParseReceiver"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name= "com.example.saqibfredrik.smartkitchen.CUSTOM_NOTIFICATION" />
+            </intent-filter>
+        </receiver>
+        <!-- End of MyCustom Notification Receiver -->
+
         <receiver android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-
                 <!--
                   IMPORTANT: Change "com.parse.starter" to match your app's package name.
                 -->
                 <category android:name="com.example.saqibfredrik.smartkitchen" />
             </intent-filter>
         </receiver>
+        <!-- End of Parse.com requirements -->
     </application>
 
 </manifest>
