--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ImageHandler"/>
+        <activity android:name=".InventoryStatus"/>
 
         <!-- Need for Parse.com notifications -->
         <service android:name="com.parse.PushService" />
