--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ImageHandler"/>
-        <activity android:name=".InventoryStatus"/>
+        <!--  ImageHandler -->
+        <activity
+            android:name=".ImageHandler"
+            android:parentActivityName=".MainActivity"/>
+
+        <!--  InventoryStatus -->
+        <activity
+            android:name=".InventoryStatus"
+            android:parentActivityName=".MainActivity"/>
 
         <!-- Need for Parse.com notifications -->
         <service android:name="com.parse.PushService" />
